# customer-service-hallucination-audit

./: .editorconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  skills-lock.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/: ground_truth.json
docs/: DELIVERY_REVIEW.md  DEVELOPMENT.md  QUALITY_SMOKE.md  RELEASE_CHECKLIST.md  SPEC.md
docs/decisions/: ADR-001-python-cli.md
docs/reports/: stage-1-report.json  stage-1-report.md
scripts/: quality.ps1
src/customer_service_hallucination_audit/: __init__.py  __main__.py  detector.py  io.py  metrics.py  models.py  pipeline.py  reporting.py  validation.py
src/customer_service_hallucination_audit/data/: __init__.py  replies.json
tasks/: plan.md  stage-2-plan.md  stage-2-todo.md  stage-3-plan.md  stage-3-todo.md  stage-4-plan.md  stage-4-todo.md  todo.md
tests/: test_cli.py  test_delivery_reports.py  test_detector.py  test_io.py  test_metrics.py  test_models.py  test_pipeline.py  test_reporting.py  test_scaffold.py
tests/fixtures/: README.md  stage_2_robustness_ground_truth.json  stage_2_robustness_replies.json
