[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-service-hallucination-audit"
dynamic = ["version"]
description = "Offline hallucination audit pipeline for customer service replies."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AI Evaluation Candidate" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
cs-hallucination-audit = "customer_service_hallucination_audit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "customer_service_hallucination_audit.__version__" }

[tool.setuptools.package-data]
customer_service_hallucination_audit = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["customer_service_hallucination_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
